add pivot selection, add doc

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(HEADERS
     ./detail/base_case.hpp
+    ./detail/selection.hpp
 
     ./parallel_sort.hpp
 )
@@ -9,5 +10,8 @@ set(LIBS
     Threads::Threads
 )
 
-add_executable(test test/test.cpp ${HEADERS})
-target_link_libraries(test ${LIBS})
+add_executable(base_case test/base_case.cpp ${HEADERS})
+target_link_libraries(base_case ${LIBS})
+
+add_executable(selection test/selection.cpp ${HEADERS})
+target_link_libraries(selection ${LIBS})
