complete sequential sorter
- add sequential sorter helper class
- add sequential interface
- add markdown documentation
- refactor 'start' to 'begin'

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,7 +1,10 @@
 set(HEADERS
     ./detail/base_case.hpp
     ./detail/selection.hpp
+    ./detail/sequential.hpp
+    ./detail/sorter.hpp
 
+    ./configuration.hpp
     ./parallel_sort.hpp
 )
 
