add test for sequential sorter

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -13,8 +13,11 @@ set(LIBS
     Threads::Threads
 )
 
-add_executable(base_case test/base_case.cpp ${HEADERS})
-target_link_libraries(base_case ${LIBS})
+add_executable(base_case_test test/base_case.cpp ${HEADERS})
+target_link_libraries(base_case_test ${LIBS})
 
-add_executable(selection test/selection.cpp ${HEADERS})
-target_link_libraries(selection ${LIBS})
+add_executable(selection_test test/selection.cpp ${HEADERS})
+target_link_libraries(selection_test ${LIBS})
+
+add_executable(sequential_test test/sequential.cpp ${HEADERS})
+target_link_libraries(sequential_test ${LIBS})
