--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,3 +1,13 @@
+set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
+set(THREADS_PREFER_PTHREAD_FLAG TRUE)
+find_package(Threads REQUIRED)
+
+find_package(Boost REQUIRED COMPONENTS unit_test_framework)
+if(Boost_FOUND)
+    include_directories(${Boost_INCLUDE_DIR})
+    add_definitions(-DBOOST_TEST_DYN_LINK)
+endif()
+
 set(HEADERS
     ./detail/base_case.hpp
     ./detail/selection.hpp
@@ -14,10 +24,13 @@ set(LIBS
 )
 
 add_executable(base_case_test test/base_case.cpp ${HEADERS})
-target_link_libraries(base_case_test ${LIBS})
-
 add_executable(selection_test test/selection.cpp ${HEADERS})
-target_link_libraries(selection_test ${LIBS})
-
 add_executable(sequential_test test/sequential.cpp ${HEADERS})
+
+target_link_libraries(base_case_test ${LIBS})
+target_link_libraries(selection_test ${LIBS})
 target_link_libraries(sequential_test ${LIBS})
+
+add_test(NAME base_case COMMAND base_case_test)
+add_test(NAME selection COMMAND selection_test)
+add_test(NAME sequential COMMAND sequential_test)
